feat(auth) Добавлены эндпоинты для обновления токенов и сброса пароля, обновлена документация
