# orderhub-api-gateway/docs/swagger.yaml
@@ -77,6 +77,27 @@ definitions:
       message:
         type: string
     type: object
+  dto.RefreshRequest:
+    properties:
+      refresh_token:
+        type: string
+    required:
+    - refresh_token
+    type: object
+  dto.RefreshResponse:
+    properties:
+      tokens:
+        properties:
+          access_expires_in:
+            type: integer
+          access_token:
+            type: string
+          refresh_expires_in:
+            type: integer
+          refresh_token:
+            type: string
+        type: object
+    type: object
   dto.RegisterRequest:
     properties:
       email:
@@ -97,6 +118,18 @@ definitions:
       role:
         type: string
       user_id:
+        type: string
+    type: object
+  dto.RequestPasswordResetRequest:
+    properties:
+      email:
+        type: string
+    required:
+    - email
+    type: object
+  dto.SuccessResponse:
+    properties:
+      message:
         type: string
     type: object
   dto.UnauthorizedErrorResponse:
@@ -135,7 +168,7 @@ paths:
     post:
       consumes:
       - application/json
-      description: Авторизует пользователя и выдаёт JWKs токен
+      description: Авторизует пользователя и выдаёт пару токенов (access/refresh)
       parameters:
       - description: Данные авторизации
         in: body
@@ -163,10 +196,44 @@ paths:
           schema:
             $ref: '#/definitions/dto.NotFoundErrorResponse'
         "500":
-          description: Внутренная ошибка
+          description: Внутренняя ошибка
           schema:
             $ref: '#/definitions/dto.InternalErrorResponse'
       summary: Авторизация пользователя
+      tags:
+      - auth
+  /api/v1/auth/refresh:
+    post:
+      consumes:
+      - application/json
+      description: Обновляет пару токенов по refresh токену
+      parameters:
+      - description: Данные для обновления токена
+        in: body
+        name: refresh
+        required: true
+        schema:
+          $ref: '#/definitions/dto.RefreshRequest'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/dto.RefreshResponse'
+        "400":
+          description: Неверные данные
+          schema:
+            $ref: '#/definitions/dto.ValidationErrorResponse'
+        "401":
+          description: Ошибка авторизации
+          schema:
+            $ref: '#/definitions/dto.UnauthorizedErrorResponse'
+        "500":
+          description: Внутренняя ошибка
+          schema:
+            $ref: '#/definitions/dto.InternalErrorResponse'
+      summary: Обновление токена
       tags:
       - auth
   /api/v1/auth/register:
@@ -201,6 +268,40 @@ paths:
           schema:
             $ref: '#/definitions/dto.InternalErrorResponse'
       summary: Регистрация пользователя
+      tags:
+      - auth
+  /api/v1/auth/request-password-reset:
+    post:
+      consumes:
+      - application/json
+      description: Запрашивает сброс пароля для пользователя по почте
+      parameters:
+      - description: Email пользователя
+        in: body
+        name: email
+        required: true
+        schema:
+          $ref: '#/definitions/dto.RequestPasswordResetRequest'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: Успешный запрос на сброс пароля
+          schema:
+            $ref: '#/definitions/dto.SuccessResponse'
+        "400":
+          description: Неверные данные
+          schema:
+            $ref: '#/definitions/dto.ValidationErrorResponse'
+        "404":
+          description: Пользователь не найден
+          schema:
+            $ref: '#/definitions/dto.NotFoundErrorResponse'
+        "500":
+          description: Внутренняя ошибка
+          schema:
+            $ref: '#/definitions/dto.InternalErrorResponse'
+      summary: Запрос на сброс пароля
       tags:
       - auth
 securityDefinitions:
